# youtubed

./: .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  TODO.MD  TODO.md  contributing.md  cookies.txt  license.md  pyproject.toml  readme.md
.github/workflows/: python-app.yml
src/youtubed/utils/: process.py
tests/: test_youtubed.py
youtubed/: audio_extractor.py  cli.py  downloader.py  main.py  process_video.py  transcript_handler.py
youtubed/utils/: downloader.py  help_box.py  process_playlist.py  process_video.py
