[tool.poetry]
name = "youtubed"
version = "0.1.0"
description = "A simple youtube downloader"
authors = ["Mauricio Bellon <mauriciobellon@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
pytube = "^15.0.0"
moviepy = "^1.0.3"
yt-dlp = "^2024.7.9"
pydub = "^0.25.1"
youtube-transcript-api = "^0.6.2"

pytest = "^8.2.2"
python-dotenv = "^1.0.1"
aiohttp = "^3.9.5"
tenacity = "^8.5.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
youtubed = "youtubed.main:youtubed"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
